# DRFgen

./: .gitignore  CHANGELOG.md  LICENSE  README.md  cli.py  main.py  setup.py
drfgen/: cli.py  pyproject.toml
drfgen/core/: venv.py
drfgen/generator/: project_builder.py
drfgen/prompts/: api_versioning.py  django_version.py  drf_version.py  swagger.py
drfgen/steps/: create_gitignore.py  custom_drfgen_startapp.py  install_common_packages.py  install_drf.py  save_config.py  swagger.py
generator/: project_builder.py
prompts/: auth_method.py  database.py  dockerize.py  settings_structure.py
steps/: custom_drfgen_startapp.py  install_common_packages.py  install_drf.py  save_config.py
utils/: pypi.py
