[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "drfgen"               
version = "0.1.0"
description = "CLI to scaffold custom Django REST Framework projects"
readme = "README.md"
readme-content-type = "text/markdown"
authors = [
  {name = "Your Name", email = "you@example.com"}
]
license = {text = "MIT"}       
requires-python = ">=3.8"
keywords = ["django", "drf", "cli", "scaffold"]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Framework :: Django",
]

# dependencies: 
dependencies = []

[project.scripts]
drfgen = "drfgen.main:main"   

[tool.setuptools.packages.find]
where = ["."]
include = ["drfgen*"]

[tool.setuptools.package-data]
"drfgen" = ["templates/**", ]  